--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -1,8 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block content %}
-		
-		
+{% block content %}		
 <!DOCTYPE html>
 <html lang="zxx" class="no-js">
 <head>
@@ -188,9 +186,9 @@
 									<li><a href="#">Lifestyle</a></li>
 								</ul>
 								<div class="user-details row">
-									<p class="user-name col-lg-12 col-md-12 col-6"><a href="#">Mark wiens</a> <span class="lnr lnr-user"></span></p>
-									<p class="date col-lg-12 col-md-12 col-6"><a href="#">12 Dec, 2017</a> <span class="lnr lnr-calendar-full"></span></p>
-									<p class="view col-lg-12 col-md-12 col-6"><a href="#">1.2M Views</a> <span class="lnr lnr-eye"></span></p>
+									<p class="user-name col-lg-12 col-md-12 col-6"><a href="#">{Mark wiens}</a> <span class="lnr lnr-user"></span></p>
+									<p class="date col-lg-12 col-md-12 col-6"><a href="#">{{post.published_date}}</a> <span class="lnr lnr-calendar-full"></span></p>
+									<p class="view col-lg-12 col-md-12 col-6"><a href="#">{{post.counted_views}}</a> <span class="lnr lnr-eye"></span></p>
 									<p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span class="lnr lnr-bubble"></span></p>						
 								</div>
 							</div>
@@ -198,7 +196,7 @@
 								<div class="feature-img">
 									<img class="img-fluid" src="{% static 'img/blog/feature-img1.jpg ' %}" alt="">
 								</div>
-								<a class="posts-title" href="#"><h3>{{post.title}}</h3></a>
+								<a class="posts-title" href="/blog/{{post.id}}"><h3>{{post.title}}</h3></a>
 								<p class="excert">
 									{{post.content}}
 								</p>
@@ -493,4 +491,3 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	</body>
 </html>
 </html>{% endblock %}
-			
