--- a/templates/test.html
+++ b/templates/test.html
@@ -7,16 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    {{ posts }}
-{% for post in posts %}
-{% if post.status == 0 %}
-<p> not published yet</p>
-{% else %}
-<h1>{{post.title}}</h1>
-<p>{{post.content}}</p>
-<small>{{post.published_date}}</small>
-{% endif %}
-{% endfor %}
-
+ <p>
+  {{post.title}}  
+ </p>
 </body>
 </html>
