--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -182,11 +182,11 @@
 								<ul class="tags">
 									<li><a href="#">Food,</a></li>
 									<li><a href="#">Technology,</a></li>
-									<li><a href="#">Politics,</a></li>
+									<li><a href="#">Politics,</a></li>	
 									<li><a href="#">Lifestyle</a></li>
 								</ul>
 								<div class="user-details row">
-									<p class="user-name col-lg-12 col-md-12 col-6"><a href="#">{Mark wiens}</a> <span class="lnr lnr-user"></span></p>
+									<p class="user-name col-lg-12 col-md-12 col-6"><a href="#">{{post.author.get_full_name}}</a> <span class="lnr lnr-user"></span></p>
 									<p class="date col-lg-12 col-md-12 col-6"><a href="#">{{post.published_date}}</a> <span class="lnr lnr-calendar-full"></span></p>
 									<p class="view col-lg-12 col-md-12 col-6"><a href="#">{{post.counted_views}}</a> <span class="lnr lnr-eye"></span></p>
 									<p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span class="lnr lnr-bubble"></span></p>						
@@ -194,7 +194,7 @@
 							</div>
 							<div class="col-lg-9 col-md-9 ">
 								<div class="feature-img">
-									<img class="img-fluid" src="{% static 'img/blog/feature-img1.jpg ' %}" alt="">
+									<img class="img-fluid" src="{{post.image}}" alt="">
 								</div>
 								<a class="posts-title" href="/blog/{{post.id}}"><h3>{{post.title}}</h3></a>
 								<p class="excert">
