--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -180,10 +180,10 @@
 						<div class="single-post row">
 							<div class="col-lg-3  col-md-3 meta-details">
 								<ul class="tags">
+									{% for cat in post.Category.all %}
+									{{cat.name}}
+									{% endfor %}
 									<li><a href="#">Food,</a></li>
-									<li><a href="#">Technology,</a></li>
-									<li><a href="#">Politics,</a></li>	
-									<li><a href="#">Lifestyle</a></li>
 								</ul>
 								<div class="user-details row">
 									<p class="user-name col-lg-12 col-md-12 col-6"><a href="#">{{post.author.get_full_name}}</a> <span class="lnr lnr-user"></span></p>
@@ -194,11 +194,12 @@
 							</div>
 							<div class="col-lg-9 col-md-9 ">
 								<div class="feature-img">
-									<img class="img-fluid" src="{{post.image}}" alt="">
+									<img class="img-fluid" src="{{post.image.url}}" alt="">
 								</div>
 								<a class="posts-title" href="/blog/{{post.id}}"><h3>{{post.title}}</h3></a>
 								<p class="excert">
 									{{post.content}}
+								
 								</p>
 								<a href="#" class="primary-btn">View More</a>
 							</div>
