--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -181,13 +181,12 @@
 							<div class="col-lg-3  col-md-3 meta-details">
 								<ul class="tags">
 									{% for cat in post.Category.all %}
-									{{cat.name}}
+									 <a href="#">{{cat.name}}</a>{% if not forloop.last %},{% endif %}
 									{% endfor %}
-									<li><a href="#">Food,</a></li>
 								</ul>
 								<div class="user-details row">
 									<p class="user-name col-lg-12 col-md-12 col-6"><a href="#">{{post.author.get_full_name}}</a> <span class="lnr lnr-user"></span></p>
-									<p class="date col-lg-12 col-md-12 col-6"><a href="#">{{post.published_date}}</a> <span class="lnr lnr-calendar-full"></span></p>
+									<p class="date col-lg-12 col-md-12 col-6"><a href="#">{{post.published_date|date:"d M Y"}}</a> <span class="lnr lnr-calendar-full"></span></p>
 									<p class="view col-lg-12 col-md-12 col-6"><a href="#">{{post.counted_views}}</a> <span class="lnr lnr-eye"></span></p>
 									<p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span class="lnr lnr-bubble"></span></p>						
 								</div>
@@ -198,7 +197,7 @@
 								</div>
 								<a class="posts-title" href="/blog/{{post.id}}"><h3>{{post.title}}</h3></a>
 								<p class="excert">
-									{{post.content}}
+									{{post.content | truncatechars:100}}
 								
 								</p>
 								<a href="#" class="primary-btn">View More</a>
@@ -237,63 +236,11 @@
 									<button type="submit"><i class="fa fa-search"></i></button>
 								</form>
 							</div>
-							<div class="single-sidebar-widget user-info-widget">
-								<img src="{% static 'img/blog/user-info.png" alt="">
-								<a href="#"><h4>Charlie Barber</h4></a>
-								<p>
-									Senior blog writer
-								</p>
-								<ul class="social-links">
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-github"></i></a></li>
-									<li><a href="#"><i class="fa fa-behance"></i></a></li>
-								</ul>
-								<p>
-									Boot camps have its supporters andit sdetractors. Some people do not understand why you should have to spend money on boot camp when you can get. Boot camps have itssuppor ters andits detractors.
-								</p>
-							</div>
-							<div class="single-sidebar-widget popular-post-widget">
-								<h4 class="popular-title">Popular Posts</h4>
-								<div class="popular-post-list">
-									<div class="single-post-list d-flex flex-row align-items-center">
-										<div class="thumb">
-											<img class="img-fluid" src="{% static 'img/blog/pp1.jpg ' %}" alt="">
-										</div>
-										<div class="details">
-											<a href="blog-single.html"><h6>Space The Final Frontier</h6></a>
-											<p>02 Hours ago</p>
-										</div>
-									</div>
-									<div class="single-post-list d-flex flex-row align-items-center">
-										<div class="thumb">
-											<img class="img-fluid" src="{% static 'img/blog/pp2.jpg ' %}" alt="">
-										</div>
-										<div class="details">
-											<a href="blog-single.html"><h6>The Amazing Hubble</h6></a>
-											<p>02 Hours ago</p>
-										</div>
-									</div>
-									<div class="single-post-list d-flex flex-row align-items-center">
-										<div class="thumb">
-											<img class="img-fluid" src="{% static 'img/blog/pp3.jpg ' %}" alt="">
-										</div>
-										<div class="details">
-											<a href="blog-single.html"><h6>Astronomy Or Astrology</h6></a>
-											<p>02 Hours ago</p>
-										</div>
-									</div>
-									<div class="single-post-list d-flex flex-row align-items-center">
-										<div class="thumb">
-											<img class="img-fluid" src="{% static 'img/blog/pp4.jpg ' %}" alt="">
-										</div>
-										<div class="details">
-											<a href="blog-single.html"><h6>Asteroids telescope</h6></a>
-											<p>02 Hours ago</p>
-										</div>
-									</div>															
-								</div>
-							</div>
+							{% include 'blog/blog-writer.html' %}
+							{% include 'blog/blog-popular-posts.html' %}
+
+
+
 							<div class="single-sidebar-widget ads-widget">
 								<a href="#"><img class="img-fluid" src="{% static 'img/blog/ads-banner.jpg ' %}" alt=""></a>
 							</div>
