--- a/templates/website/test.html
+++ b/templates/website/test.html
@@ -1,3 +1,4 @@
+{% load blog_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,8 +8,12 @@
     <title>Document</title>
 </head>
 <body>
- <p>
-  {{post.title}}  
- </p>
+    <h1>
+        test page
+    </h1>
+    <p>  test: {% posts as totalposts %}</p>
+    {% for post in totalposts %}
+        <p>{{post}}</p> 
+    {% endfor %}
 </body>
 </html>
