--- a/templates/website/test.html
+++ b/templates/website/test.html
@@ -11,9 +11,8 @@
     <h1>
         test page
     </h1>
-    <p>  test: {% posts as totalposts %}</p>
-    {% for post in totalposts %}
-        <p>{{post}}</p> 
-    {% endfor %}
+    <p>  test: </p>
+        <p>{% popularposts %}</p> 
+  
 </body>
 </html>
