--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block content %}		
+{% block content %}	
+{% load blog_tags %}	
 <!DOCTYPE html>
 <html lang="zxx" class="no-js">
 <head>
@@ -238,59 +239,14 @@
 							</div>
 							{% include 'blog/blog-writer.html' %}
 							{% include 'blog/blog-popular-posts.html' %}
+							{% postcategories %}
+
 
 
 
 							<div class="single-sidebar-widget ads-widget">
 								<a href="#"><img class="img-fluid" src="{% static 'img/blog/ads-banner.jpg ' %}" alt=""></a>
 							</div>
-							<div class="single-sidebar-widget post-category-widget">
-								<h4 class="category-title">Post Catgories</h4>
-								<ul class="cat-list">
-									<li>
-										<a href="#" class="d-flex justify-content-between">
-											<p>Technology</p>
-											<p>37</p>
-										</a>
-									</li>
-									<li>
-										<a href="#" class="d-flex justify-content-between">
-											<p>Lifestyle</p>
-											<p>24</p>
-										</a>
-									</li>
-									<li>
-										<a href="#" class="d-flex justify-content-between">
-											<p>Fashion</p>
-											<p>59</p>
-										</a>
-									</li>
-									<li>
-										<a href="#" class="d-flex justify-content-between">
-											<p>Art</p>
-											<p>29</p>
-										</a>
-									</li>
-									<li>
-										<a href="#" class="d-flex justify-content-between">
-											<p>Food</p>
-											<p>15</p>
-										</a>
-									</li>
-									<li>
-										<a href="#" class="d-flex justify-content-between">
-											<p>Architecture</p>
-											<p>09</p>
-										</a>
-									</li>
-									<li>
-										<a href="#" class="d-flex justify-content-between">
-											<p>Adventure</p>
-											<p>44</p>
-										</a>
-									</li>															
-								</ul>
-							</div>	
 							<div class="single-sidebar-widget newsletter-widget">
 								<h4 class="newsletter-title">Newsletter</h4>
 								<p>
