--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -231,7 +231,7 @@
 						</form>
 					</div>
 					{% include 'blog/blog-writer.html' %}
-					{% include 'blog/blog-popular-posts.html' %}
+					{% latestposts %}
 					<div class="single-sidebar-widget ads-widget">
 						<a href="#"><img class="img-fluid" src="{% static 'img/blog/ads-banner.jpg' %}" alt=""></a>
 					</div>
