--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -14,7 +14,7 @@
 	<!-- Meta Description -->
 	<meta name="description" content="">
 	<!-- Meta Keyword -->
-	<meta name="keywords" content="">
+	<meta name="keywords" content="">	
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
@@ -34,7 +34,7 @@
 		<link rel="stylesheet" href="css/owl.carousel.css">				
 		<link rel="stylesheet" href="css/main.css">
 	</head>
-	<body>	
+	<body>
 		<header id="header">
 			<div class="header-top">
 				<div class="container">
@@ -186,7 +186,7 @@
 									{% endfor %}
 								</ul>
 								<div class="user-details row">
-									<p class="user-name col-lg-12 col-md-12 col-6"><a href="#">{{post.author.get_full_name}}</a> <span class="lnr lnr-user"></span></p>
+									<p class="user-name col-lg-12 col-md-12 col-6"><a href="{% url 'blog:author' author_username=post.author.username %}">{{post.author.get_full_name}}</a> <span class="lnr lnr-user"></span></p>
 									<p class="date col-lg-12 col-md-12 col-6"><a href="#">{{post.published_date|date:"d M Y"}}</a> <span class="lnr lnr-calendar-full"></span></p>
 									<p class="view col-lg-12 col-md-12 col-6"><a href="#">{{post.counted_views}}</a> <span class="lnr lnr-eye"></span></p>
 									<p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span class="lnr lnr-bubble"></span></p>						
