--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -231,15 +231,11 @@
 					</div>
 					<div class="col-lg-4 sidebar-widgets">
 						<div class="widget-wrap">
-							<div class="single-sidebar-widget search-widget">
-								<form class="search-form" action="#">
-									<input placeholder="Search Posts" name="search" type="text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Search Posts'" >
-									<button type="submit"><i class="fa fa-search"></i></button>
-								</form>
-							</div>
+							
 							{% include 'blog/blog-writer.html' %}
 							{% include 'blog/blog-popular-posts.html' %}
 							{% postcategories %}
+							{% include 'blog/blog-search.html' %}
 
 
 
