--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -195,8 +195,7 @@
 								<p class="user-name col-lg-12 col-md-12 col-6"><a
 										href="{% url 'blog:author' author_username=post.author.username %}">{{post.author.get_full_name}}</a>
 									<span class="lnr lnr-user"></span></p>
-								<p class="date col-lg-12 col-md-12 col-6"><a href="#">{{post.published_date|date:"d M
-										Y"}}</a> <span class="lnr lnr-calendar-full"></span></p>
+								<p class="date col-lg-12 col-md-12 col-6"><a href="#">{{post.published_date|date:"d M Y"}}</a> <span class="lnr lnr-calendar-full"></span></p>
 								<p class="view col-lg-12 col-md-12 col-6"><a href="#">{{post.counted_views}}</a> <span
 										class="lnr lnr-eye"></span></p>
 								<p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span
@@ -287,8 +286,8 @@
 								<a href="#" class="bbtns">Subcribe</a>
 							</div>
 							<p class="text-bottom">
-								You can unsubscribe at any time
-							</p>
+									You can unsubscribe at any time
+								</p>
 						</div>
 						<div class="single-sidebar-widget tag-cloud-widget">
 							<h4 class="tagcloud-title">Tag Clouds</h4>
