--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block content %}
 {% load blog_tags %}
+
 <!DOCTYPE html>
 <html lang="zxx" class="no-js">
 
@@ -40,24 +41,6 @@
 <body>
 	<header id="header">
 		<div class="header-top">
-			<div class="container">
-				<div class="row align-items-center">
-					<div class="col-lg-6 col-sm-6 col-6 header-top-left">
-						<ul>
-							<li><a href="#">Visit Us</a></li>
-							<li><a href="#">Buy Tickets</a></li>
-						</ul>
-					</div>
-					<div class="col-lg-6 col-sm-6 col-6 header-top-right">
-						<div class="header-social">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-dribbble"></i></a>
-							<a href="#"><i class="fa fa-behance"></i></a>
-						</div>
-					</div>
-				</div>
-			</div>
 		</div>
 	</header><!-- #header -->
 
@@ -164,7 +147,7 @@
 								<p class="date col-lg-12 col-md-12 col-6"><a href="#">{{post.published_date|date:"d M Y"}}</a> <span class="lnr lnr-calendar-full"></span></p>
 								<p class="view col-lg-12 col-md-12 col-6"><a href="#">{{post.counted_views}}</a> <span
 										class="lnr lnr-eye"></span></p>
-								<p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span
+								<p class="comments col-lg-12 col-md-12 col-6"><a href="#">{{comments|length}} Comments</a> <span
 										class="lnr lnr-bubble"></span></p>
 							</div>
 						</div>
@@ -176,10 +159,8 @@
 								<h3>{{post.title}}</h3>
 							</a>
 							<p class="excert">
-								{{post.content | truncatechars:100}}
-
 							</p>
-							<a href="#" class="primary-btn">View More</a>
+							<a href="/blog/{{post.id}}" class="primary-btn">View More</a>
 						</div>
 					</div>
 					{% endfor %}
@@ -284,93 +265,9 @@
 		<div class="container">
 
 			<div class="row">
-				<div class="col-lg-3  col-md-6 col-sm-6">
-					<div class="single-footer-widget">
-						<h6>About Agency</h6>
-						<p>
-							The world has become so fast paced that people don’t want to stand by reading a page of
-							information, they would much rather look at a presentation and understand the message. It
-							has come to a point
-						</p>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-6 col-sm-6">
-					<div class="single-footer-widget">
-						<h6>Navigation Links</h6>
-						<div class="row">
-							<div class="col">
-								<ul>
-									<li><a href="#">Home</a></li>
-									<li><a href="#">Feature</a></li>
-									<li><a href="#">Services</a></li>
-									<li><a href="#">Portfolio</a></li>
-								</ul>
-							</div>
-							<div class="col">
-								<ul>
-									<li><a href="#">Team</a></li>
-									<li><a href="#">Pricing</a></li>
-									<li><a href="#">Blog</a></li>
-									<li><a href="#">Contact</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3  col-md-6 col-sm-6">
-					<div class="single-footer-widget">
-						<h6>Newsletter</h6>
-						<p>
-							For business professionals caught between high OEM price and mediocre print and graphic
-							output.
-						</p>
-						<div id="mc_embed_signup">
-							<form target="_blank"
-								action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-								method="get" class="subscription relative">
-								<div class="input-group d-flex flex-row">
-									<input name="EMAIL" placeholder="Email Address" onfocus="this.placeholder = ''"
-										onblur="this.placeholder = 'Email Address '" required="" type="email">
-									<button class="btn bb-btn"><span class="lnr lnr-location"></span></button>
-								</div>
-								<div class="mt-10 info"></div>
-							</form>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-3  col-md-6 col-sm-6">
-					<div class="single-footer-widget mail-chimp">
-						<h6 class="mb-20">InstaFeed</h6>
-						<ul class="instafeed d-flex flex-wrap">
-							<li><img src="{% static 'img/i1.jpg ' %}" alt=""></li>
-							<li><img src="{% static 'img/i2.jpg ' %}" alt=""></li>
-							<li><img src="{% static 'img/i3.jpg ' %}" alt=""></li>
-							<li><img src="{% static 'img/i4.jpg ' %}" alt=""></li>
-							<li><img src="{% static 'img/i5.jpg ' %}" alt=""></li>
-							<li><img src="{% static 'img/i6.jpg ' %}" alt=""></li>
-							<li><img src="{% static 'img/i7.jpg ' %}" alt=""></li>
-							<li><img src="{% static 'img/i8.jpg ' %}" alt=""></li>
-						</ul>
-					</div>
-				</div>
 			</div>
 
-			<div class="row footer-bottom d-flex justify-content-between align-items-center">
-				<p class="col-lg-8 col-sm-12 footer-text m-0">
-					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-					Copyright &copy;
-					<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
-					made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com"
-						target="_blank">Colorlib</a>
-					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-				</p>
-				<div class="col-lg-4 col-sm-12 footer-social">
-					<a href="#"><i class="fa fa-facebook"></i></a>
-					<a href="#"><i class="fa fa-twitter"></i></a>
-					<a href="#"><i class="fa fa-dribbble"></i></a>
-					<a href="#"><i class="fa fa-behance"></i></a>
-				</div>
-			</div>
+		
 		</div>
 	</footer>
 	<!-- End footer Area -->
