--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% load blog_tags %}
 {% block content %}
+{% load humanize %}
 
 <!-- start banner Area -->
 <section class="relative about-banner">
@@ -10,10 +11,10 @@
 		<div class="row d-flex align-items-center justify-content-center">
 			<div class="about-content col-lg-12">
 				<h1 class="text-white">
-				{{post.title}}
+					{{post.title}}
 				</h1>
 				<p class="text-white link-nav"><a href="{%url 'website:index' %}">Home </a> <span
-						class="lnr lnr-arrow-right"></span><a href="{%url 'website:index' %}">Blog </a> <span
+						class="lnr lnr-arrow-right"></span><a href="{%url 'website:index'%}">Blog </a> <span
 						class="lnr lnr-arrow-right"></span>{{post.title}}</a></p>
 			</div>
 		</div>
@@ -40,13 +41,13 @@
 							<li><a href="#">Lifestyle</a></li>
 						</ul>
 						<div class="user-details row">
-							<p class="user-name col-lg-12 col-md-12 col-6"><a href="#">{{post.author.get_full_name}}</a> <span
-									class="lnr lnr-user"></span></p>
-							<p class="date col-lg-12 col-md-12 col-6"><a href="#">{{post.published_date|date:"d M Y"}}</a> <span
-									class="lnr lnr-calendar-full"></span></p>
+							<p class="user-name col-lg-12 col-md-12 col-6"><a href="#">{{post.author.get_full_name}}</a>
+								<span class="lnr lnr-user"></span>
+							</p>
+							<p class="date col-lg-12 col-md-12 col-6"><a href="#">{{post.published_date|date:"d M Y"}}</a> <span class="lnr lnr-calendar-full"></span></p>
 							<p class="view col-lg-12 col-md-12 col-6"><a href="#">{{post.counted_views}}</a> <span
 									class="lnr lnr-eye"></span></p>
-							<p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span
+							<p class="comments col-lg-12 col-md-12 col-6"><a href="#">{{comments|length}} Comments</a> <span
 									class="lnr lnr-bubble"></span></p>
 							<ul class="social-links col-lg-12 col-md-12 col-6">
 								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -59,7 +60,7 @@
 					<div class="col-lg-9 col-md-9">
 						<h3 class="mt-20 mb-20">{{post.title}}</h3>
 						<p class="excert">
-							{{post.content}}
+							{{post.content|safe}}
 						</p>
 					</div>
 				</div>
@@ -97,103 +98,62 @@
 						</div>
 					</div>
 				</div>
+				<!--
 				<div class="comments-area">
-					<h4>05 Comments</h4>
+
+					<div id="disqus_thread"></div>
+					<script>
+						/**
+						*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+						*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+						/*
+						var disqus_config = function () {
+						this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+						this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+						};
+						*/
+						(function () { // DON'T EDIT BELOW THIS LINE
+							var d = document, s = d.createElement('script');
+							s.src = 'https://127-0-0-1-8000-usbpdqmuwv.disqus.com/embed.js';
+							s.setAttribute('data-timestamp', +new Date());
+							(d.head || d.body).appendChild(s);
+						})();
+					</script>
+					<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments
+							powered by Disqus.</a></noscript>
+
+
+
+				</div>
+			    -->
+				<div class="comments-area">
+					 <h4> {{comments|length}} Comments  </h4>
 					<div class="comment-list">
+					{% for comment in comments %}
 						<div class="single-comment justify-content-between d-flex">
 							<div class="user justify-content-between d-flex">
 								<div class="thumb">
 									<img src="{% static 'img/blog/c1.jpg' %}" alt="">
 								</div>
 								<div class="desc">
-									<h5><a href="#">Emilly Blunt</a></h5>
-									<p class="date">December 4, 2017 at 3:12 pm </p>
+									<h5><a href="#">{{comment.name}}</a></h5>
+									<p class="date">{{comment.created_date|naturalday}}</p>
 									<p class="comment">
-										Never say goodbye till the end comes!
+										{{comment.meesage}}
 									</p>
 								</div>
 							</div>
+							<!--
 							<div class="reply-btn">
 								<a href="" class="btn-reply text-uppercase">reply</a>
 							</div>
+						    -->
 						</div>
-					</div>
-					<div class="comment-list left-padding">
-						<div class="single-comment justify-content-between d-flex">
-							<div class="user justify-content-between d-flex">
-								<div class="thumb">
-									<img src="{% static 'img/blog/c2.jpg' %}" alt="">
-								</div>
-								<div class="desc">
-									<h5><a href="#">Elsie Cunningham</a></h5>
-									<p class="date">December 4, 2017 at 3:12 pm </p>
-									<p class="comment">
-										Never say goodbye till the end comes!
-									</p>
-								</div>
-							</div>
-							<div class="reply-btn">
-								<a href="" class="btn-reply text-uppercase">reply</a>
-							</div>
-						</div>
-					</div>
-					<div class="comment-list left-padding">
-						<div class="single-comment justify-content-between d-flex">
-							<div class="user justify-content-between d-flex">
-								<div class="thumb">
-									<img src="{% static 'img/blog/c3.jpg' %}" alt="">
-								</div>
-								<div class="desc">
-									<h5><a href="#">Annie Stephens</a></h5>
-									<p class="date">December 4, 2017 at 3:12 pm </p>
-									<p class="comment">
-										Never say goodbye till the end comes!
-									</p>
-								</div>
-							</div>
-							<div class="reply-btn">
-								<a href="" class="btn-reply text-uppercase">reply</a>
-							</div>
-						</div>
-					</div>
-					<div class="comment-list">
-						<div class="single-comment justify-content-between d-flex">
-							<div class="user justify-content-between d-flex">
-								<div class="thumb">
-									<img src="{% static 'img/blog/c4.jpg' %}" alt="">
-								</div>
-								<div class="desc">
-									<h5><a href="#">Maria Luna</a></h5>
-									<p class="date">December 4, 2017 at 3:12 pm </p>
-									<p class="comment">
-										Never say goodbye till the end comes!
-									</p>
-								</div>
-							</div>
-							<div class="reply-btn">
-								<a href="" class="btn-reply text-uppercase">reply</a>
-							</div>
-						</div>
-					</div>
-					<div class="comment-list">
-						<div class="single-comment justify-content-between d-flex">
-							<div class="user justify-content-between d-flex">
-								<div class="thumb">
-									<img src="{% static 'img/blog/c5.jpg' %}" alt="">
-								</div>
-								<div class="desc">
-									<h5><a href="#">Ina Hayes</a></h5>
-									<p class="date">December 4, 2017 at 3:12 pm </p>
-									<p class="comment">
-										Never say goodbye till the end comes!
-									</p>
-								</div>
-							</div>
-							<div class="reply-btn">
-								<a href="" class="btn-reply text-uppercase">reply</a>
-							</div>
-						</div>
-					</div>
+						{% empty %}
+						<p> No Comments Here </p>
+					{% endfor %}
+				</div>
+
 				</div>
 				<div class="comment-form">
 					<h4>Leave a Comment</h4>
@@ -309,18 +269,9 @@
 					<div class="single-sidebar-widget tag-cloud-widget">
 						<h4 class="tagcloud-title">Tag Clouds</h4>
 						<ul>
-							<li><a href="#">Technology</a></li>
-							<li><a href="#">Fashion</a></li>
-							<li><a href="#">Architecture</a></li>
-							<li><a href="#">Fashion</a></li>
-							<li><a href="#">Food</a></li>
-							<li><a href="#">Technology</a></li>
-							<li><a href="#">Lifestyle</a></li>
-							<li><a href="#">Art</a></li>
-							<li><a href="#">Adventure</a></li>
-							<li><a href="#">Food</a></li>
-							<li><a href="#">Lifestyle</a></li>
-							<li><a href="#">Adventure</a></li>
+							{% for tag in post.tags.all %}
+							<li><a href="#">{{tag.name}}</a></li>
+							{% endfor %}
 						</ul>
 					</div>
 				</div>
@@ -329,6 +280,4 @@
 	</div>
 </section>
 <!-- End post-content Area -->
-
-
 {% endblock %}
