--- a/templates/website/contact.html
+++ b/templates/website/contact.html
@@ -80,6 +80,7 @@
 								required=""></textarea>
 						</div>
 						<div class="col-lg-12">
+							{{form.captcha}}
 							<div class="alert-msg" style="text-align: left;"></div>
 							<button type="submit" class="genric-btn primary" style="float: right;">Send Message</button>
 						</div>
@@ -113,4 +114,4 @@
 	</div>
 </section>
 <!-- End contact-page Area -->
-{% endblock %}
+{% endblock %}	
