--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -25,14 +25,15 @@
       <label for="inputEmail" class="sr-only">Username</label>
       <input type="text" name="username" class="form-control" placeholder="Username" required autofocus>
       <label for="inputPassword" class="sr-only">Password</label>
-      <input type="password" name="password" class="form-control" placeholder="Password" required>
+      <input type="password" name="password1" class="form-control" placeholder="Password" required>
+      <input type="password" name="password2" class="form-control" placeholder="Confirm Password" required>
       <div class="checkbox mb-3">
         <label>
           <input type="checkbox" value="remember-me"> Remember me
         </label>
       </div>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Signup</button>
-      <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
+      <p class="mt-5 mb-3 text-muted">&copy; mhmdbabaie</p>
     </form>
   </body>
 </html>
